css/styles.css
/* Utility */

*{
    margin: 0;
    padding: 0;
    border: 0;
}

/* tag selectors */

body {
    background-color: #f6f8f9;
}

p {
    display: inline-block;
    font-family: "Poppins";
}

img {
    display: inline-block;
}

button {
    color: black;
    border-radius: 5px;
    height: 27px;
    width: 78px;
    margin-bottom: 10px;
}

hr {
    color: #f6f8f9;
}

header {
    background-color: white;
    height: 70px;
    width: 100%;
    margin-bottom: 40px;
}

/* Class selectors */

.logo {
    padding: 10px 20px;
}

.logo {
    height: 50px;
}

button.add-task {
    background-color: #14aaf5;
}

button.add-section {
    background-color: white;
    outline: 1px solid gray;
}
    
.open-arrow {
    height: 7px;
}

.section-title {
    font-size: 20px;
    font-weight: 400;
    margin-top: 20px;
    margin-bottom: 20px;
}

.task-complete {
    display: inline-block;
    border-radius: 50px;
    outline: 1px solid #2cc6ab;
    font-size: 15px;
    height: 17px;
    width: 17px;
    color: #2cc6ab;
    text-align: center;
}

.task-incomplete {
    display: inline-block;
    border-radius: 50px;
    outline: 1px solid #df0d0d;
    font-size: 15px;
    height: 17px;
    width: 17px;
    color: #df0d0d;
    text-align: center;
}

.tag {
    display: inline-block;
    text-align: center;
    border-radius: 20px;
    width: 56px;
    height: 21px;
    color: white;
    font-size: 10px;
    background-color: #14aaf5;
    line-height: 21px;
}

.container {
    width: 80%;
    height: auto;
    background-color: white;
    margin: auto;
    position: relative;
    border-radius: 10px;
    padding: 20px 35px;
  }
  
  ul li {
    list-style-type: none;
    font-size: 15px;
    font-weight: 200;
    margin-bottom: 20px;
  }

